--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html lang="en"><head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>CodePen - Glassmorphism Creative Cloud App Redesign</title>
+  <title>Открыть ChatGPT</title>
 <link rel="stylesheet" href="./style.css">
 
     <style type="text/css">
@@ -24,7 +24,7 @@
       
 <!-- partial:index.partial.html -->
 
-        <a href="https://www.yahoo.com" target="_blank"><button type="button">Открыть ChatGPT</button></a>
+        <a href="https://gpt2.ru/" target="_blank"><button type="button">Открыть ChatGPT</button></a>
     
    </div>
   </div>
